test/errors/ltac/return1.qk

#OUTPUT
#Syntax Error: Cannot return value in void function: main
# -> [13] return 0
#
#END

#RET 0

extern func printf(s:str, ...)

func main()
    return 0
end

